--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -28,6 +28,6 @@
     <%= f.text_area :body, class: "form-control" %>
   </div>
   <div class="col-sm-9 form-group">
-    <%= f.submit class: "btn btn-sm btn-primary" %>
+    <%= f.submit class: "btn btn-sm btn-success" %>
   </div>
 <% end %>
