--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -1,4 +1,4 @@
-<div class="panel panel-default">
+<div class="panel panel-success">
   <div class="panel-heading">
     <h3><%= @review.comic_name %>:<%= @review.name %>さんの投稿</span></h3>
   </div>
