--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,8 +14,11 @@
  *= require_self
  */
 nav{
-  background-color: blue;
+  background-color: #8A2BE2;
 }
 nav a{
 color: white;
+}
+body{
+    background-color: #E6E6FA;
 }
